Added new packages

--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "acl": "^0.4.11",
     "acl-mem-regexp": "^0.2.0",
     "apidoc": "^0.20.0",
-    "aws-sdk": "^2.609.0",
+    "aws-sdk": "^2.719.0",
     "body-parser": "^1.19.0",
     "bull": "^3.13.0",
     "bull-arena": "^2.7.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.8.30",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-body-parser-json-error": "^0.1.0",
@@ -56,6 +57,7 @@
     "sequelize-cli": "^5.5.1",
     "sequelize-log-syntax-colors": "^2.0.0",
     "sql-formatter": "^2.3.3",
+    "uuidv4": "^6.2.0",
     "validator": "^13.0.0",
     "yn": "^4.0.0"
   },
