--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express-brute-store-sequelize": "^2.0.4",
     "express-http-auth": "^0.1.0",
     "express-validator": "^6.3.1",
+    "newrelic": "^6.2.0",
     "pg": "^7.17.0",
     "rollbar": "^2.14.4",
     "sequelize": "^5.21.3",
